--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,44 +1,70 @@
+/* Styles de base pour tous les écrans */
 body {
+    font-family: Arial, sans-serif;
     background-color: #bfd1ec;
+    margin: 0;
+    padding: 0;
 }
 
+.filters{
+     display: flex;
+     justify-content: space-around;
+     width: auto;
+ }
 
-.example-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 1em auto;
-    max-width: 800px;
-    font: 18px/1.5 sans-serif;
+.container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
 }
 
-.container_filtre {
-    display: flex;
-    justify-content: space-around;
-    width: auto;
-}
-
-.bouton{
-    display: block;
-    background-color: #719fee;
-    border-radius: 10px;
-    border: 4px double #1f69ec;
-    color: #ffffff;
+header {
+    padding: 20px;
     text-align: center;
-    font-size: 20px;
+}
+
+nav {
     padding: 10px;
-    width: 200px;
-    cursor: pointer;
-    -webkit-transition: all 0.5s;
-    -moz-transition: all 0.5s;
-    -o-transition: all 0.5s;
-    transition: all 0.5s;
-}
-.bouton:hover{
-    background-color: #ffffff;
-    border: 2px solid #1f69ec;
-    box-shadow: 10px 5px 5px #719fee;
-    color: #1f69ec;
     text-align: center;
-    font-size: 22px;
 }
+
+nav a {
+    margin: 0 15px;
+    text-decoration: none;
+}
+
+/* Styles pour les tablettes (écrans entre 768px et 1024px) */
+@media (min-width: 768px) and (max-width: 1024px) {
+    .container {
+        padding: 15px;
+    }
+
+    nav {
+        text-align: left;
+    }
+}
+
+/* Styles pour les mobiles (écrans jusqu'à 767px) */
+@media (max-width: 767px) {
+    .navbar-brand {
+        margin-left: 50px;
+    }
+    .navbar-nav {
+        margin-left: auto;
+        margin-right: 70px;
+    }
+
+    .nav-link {
+        text-transform: uppercase;
+        font-size: 16px;
+        font-weight: 300;
+    }
+
+    .nav-item {
+        margin-left:20px;
+        margin-right:20px;
+    }
+
+}
+
