Gestion des États Créé, En cours et Passée

--- a/templates/sorties/show.html.twig
+++ b/templates/sorties/show.html.twig
@@ -42,6 +42,10 @@
                         <th>Photo</th>
                         <td>{{ sortie.urlPhoto }}</td>
                     </tr>
+                    <tr>
+                        <th>État</th>
+                        <td>{{ etat.libelle }}</td>
+                    </tr>
                     </tbody>
                 </table>
                 <h2>Liste des participants inscrits</h2>
