--- a/templates/sorties/edit.html.twig
+++ b/templates/sorties/edit.html.twig
@@ -7,7 +7,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-4">
-                {{ include('sorties/_form.roleAdmin.html.twig') }}
+                {{ include('sorties/_form.html.twig') }}
                 <div class="d-flex justify-content-center">
                     <a class="btn btn-primary" href="{{ path('app_sorties_index') }}">Liste des sorties</a>
                     {{ include('sorties/_delete_form.html.twig') }}
