Gestion dashboard Admin

--- a/templates/ajouter_villes/new.html.twig
+++ b/templates/ajouter_villes/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1 class="d-flex justify-content-center">Créer une nouvelle ville</h1>
 
-    {# {{ include('ajouter_villes/_form.roleAdmin.html.twig') }} #}
+    {# {{ include('ajouter_villes/_form.html.twig') }} #}
 
     {{ form_start(form) }}
 <div class="container">
