--- a/templates/participant/new.html.twig
+++ b/templates/participant/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Create new User</h1>
 
-    {{ include('participant/_form.roleAdmin.html.twig') }}
+    {{ include('participant/_form.html.twig') }}
 
     <a href="{{ path('app_participant_index') }}" class="btn btn-primary">back to list of users</a>
 {% endblock %}
