--- a/templates/participant/_delete_form.html.twig
+++ b/templates/participant/_delete_form.html.twig
@@ -1,11 +1,11 @@
 <form method="post" action="{{ path('app_participant_delete', {'id': participant.id}) }}"
-      onsubmit="return confirm('Are you sure you want to delete this item?');"
+      onsubmit="return confirm('Supprimer cet utilisateur ?');"
       style="display: inline-block; margin: 0; padding: 0;">
 
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ participant.id) }}">
 
-    <button class="btn btn-danger"
+    <button class="btn btn-danger ms-2"
             style="display: inline-block;">
-        Delete
+        Supprimer
     </button>
 </form>
