--- a/templates/participant/_form.html.twig
+++ b/templates/participant/_form.html.twig
@@ -1,4 +1,6 @@
-   {{ form_start(form) }}
+{{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn btn-primary">{{ button_label|default('Save') }}</button>
-    {{ form_end(form) }}
+<div class="d-flex justify-content-center">
+    <button class="btn btn-success ms-2">{{ button_label|default('Sauvegarder') }}</button>
+</div>
+{{ form_end(form) }}
