--- a/templates/participant/edit.html.twig
+++ b/templates/participant/edit.html.twig
@@ -3,11 +3,16 @@
 {% block title %}Edit Participant{% endblock %}
 
 {% block body %}
-    <h1>Edit Participant</h1>
+    <h1 class="d-flex justify-content-center">Modifier utilisateur</h1>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                {{ include('participant/_form2.html.twig', {'button_label': 'Modifier'}) }}
 
-    {{ include('participant/_form2.html.twig', {'button_label': 'Update'}) }}
+                <a href="{{ path('app_participant_index') }}" class="btn btn-primary ms-2">Liste d'utilisateurs</a>
 
-    <a href="{{ path('app_participant_index') }}" class="btn btn-primary">back to list</a>
-
-    {{ include('participant/_delete_form.html.twig') }}
+                {{ include('participant/_delete_form.html.twig') }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
