--- a/templates/participant/index.html.twig
+++ b/templates/participant/index.html.twig
@@ -3,22 +3,23 @@
 {% block title %}Users Administration{% endblock %}
 
 {% block body %}
-    <h1>All Users</h1>
+    <h1 class="d-flex justify-content-center">Liste des utilisateurs</h1>
+
 
     <table class="table">
         <thead>
-            <tr>
-                <th>Id</th>
-                <th>Email</th>
-                <th>Pseudo</th>
-                <th>Nom</th>
-                <th>Prenom</th>
-                <th>Telephone</th>
-                <th>Administrateur</th>
-                <th>Actif</th>
-                <th>Roles</th>
-                <th>actions</th>
-            </tr>
+        <tr>
+            <th>Id</th>
+            <th>Email</th>
+            <th>Pseudo</th>
+            <th>Nom</th>
+            <th>Prenom</th>
+            <th>Telephone</th>
+            <th>Administrateur</th>
+            <th>Actif</th>
+            <th>Roles</th>
+            <th>actions</th>
+        </tr>
         </thead>
         <tbody>
         {% for participant in participants %}
@@ -33,12 +34,13 @@
                 <td>{{ participant.actif ? 'Yes' : 'No' }}</td>
                 <td>{{ participant.roles ? participant.roles|json_encode : '' }}</td>
                 <td>
-                    <a href="{{ path('app_participant_show', {'id': participant.id}) }}" class="btn btn-primary">Details</a>
-                    <a href="{{ path('app_participant_edit', {'id': participant.id}) }}" class="btn btn-primary">Edit</a>
-                    {%  if participant.actif %}
+                    <a href="{{ path('app_participant_show', {'id': participant.id}) }}"
+                       class="btn btn-primary">Details</a>
+                    <a href="{{ path('app_participant_edit', {'id': participant.id}) }}" class="btn btn-primary">Modifier</a>
+                    {% if participant.actif %}
                         <a href="{{ path('app_participant_actif', {'id': participant.id}) }}" class="btn btn-warning">Désactiver</a>
-                        {% else %}
-                            <a href="{{ path('app_participant_actif', {'id': participant.id}) }}" class="btn btn-success">Activer</a>
+                    {% else %}
+                        <a href="{{ path('app_participant_actif', {'id': participant.id}) }}" class="btn btn-success">Activer</a>
                     {% endif %}
 
                     {{ include('participant/_delete_form.html.twig') }}
@@ -51,7 +53,9 @@
         {% endfor %}
         </tbody>
     </table>
-    <a href="{{ path('app_participant_new') }}" class="btn btn-primary">Create new user</a>
+    <div class="d-flex justify-content-center">
+        <a href="{{ path('app_participant_new') }}" class="btn btn-primary">Créer un nouvel utilisateur</a>
+    </div>
 
 
 
