--- a/templates/participant/new.html.twig
+++ b/templates/participant/new.html.twig
@@ -3,9 +3,17 @@
 {% block title %}New User{% endblock %}
 
 {% block body %}
-    <h1>Create new User</h1>
+    <h1 class="d-flex justify-content-center">Créer un utilisateur</h1>
 
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-4">
     {{ include('participant/_form.html.twig') }}
+        </div>
+    </div>
+</div>
 
-    <a href="{{ path('app_participant_index') }}" class="btn btn-primary">back to list of users</a>
+<div class="d-flex justify-content-center">
+    <a href="{{ path('app_participant_index') }}" class="btn btn-primary">Liste des utilisateurs</a>
+</div>
 {% endblock %}
