--- a/templates/participant/show.html.twig
+++ b/templates/participant/show.html.twig
@@ -3,77 +3,84 @@
 {% block title %}Participant{% endblock %}
 
 {% block body %}
-    <h1>Participant</h1>
+    <h1 class="d-flex justify-content-center">Participant</h1>
 
-    <table class="table">
-        <tbody>
-        <tr>
-            <th>Email</th>
-            <td>{{ participant.email }}</td>
-        </tr>
-        <tr>
-            <th>Pseudo</th>
-            <td>{{ participant.pseudo }}</td>
-        </tr>
-        <tr>
-            <th>Nom</th>
-            <td>{{ participant.nom }}</td>
-        </tr>
-        <tr>
-            <th>Prenom</th>
-            <td>{{ participant.prenom }}</td>
-        </tr>
-        <tr>
-            <th>Telephone</th>
-            <td>{{ participant.telephone }}</td>
-        </tr>
-        <tr>
-            <th>Sorties Organisées</th>
-            <td>
-                {% if participant.sorties|length > 0 %}
-                    <select class="form-select" >
-                        {% for sortie in participant.sorties %}
-                            <option>{{ sortie.nom }}</option>
-                        {% endfor %}
-                    </select>
-                {% else %}
-                    Aucune sortie associée
-                {% endif %}
-            </td>
-        </tr>
-        <tr>
-            <th>Sorties auxquelles vous êtes inscrit</th>
-            <td>
-                {% if participant.inscriptions|length > 0 %}
-                    <select class="form-select" >
-                        {% for inscription in participant.inscriptions %}
-                            <option>{{ inscription.getNoSortie().nom }}</option>
-                        {% endfor %}
-                    </select>
-                {% else %}
-                    Aucune sortie associée
-                {% endif %}
-            </td>
-        </tr>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <table class="table">
+                    <tbody>
+                    <tr>
+                        <th>Email</th>
+                        <td>{{ participant.email }}</td>
+                    </tr>
+                    <tr>
+                        <th>Pseudo</th>
+                        <td>{{ participant.pseudo }}</td>
+                    </tr>
+                    <tr>
+                        <th>Nom</th>
+                        <td>{{ participant.nom }}</td>
+                    </tr>
+                    <tr>
+                        <th>Prenom</th>
+                        <td>{{ participant.prenom }}</td>
+                    </tr>
+                    <tr>
+                        <th>Telephone</th>
+                        <td>{{ participant.telephone }}</td>
+                    </tr>
+                    <tr>
+                        <th>Sorties Organisées</th>
+                        <td>
+                            {% if participant.sorties|length > 0 %}
+                                <select class="form-select">
+                                    {% for sortie in participant.sorties %}
+                                        <option>{{ sortie.nom }}</option>
+                                    {% endfor %}
+                                </select>
+                            {% else %}
+                                Aucune sortie associée
+                            {% endif %}
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Sorties auxquelles vous êtes inscrit</th>
+                        <td>
+                            {% if participant.inscriptions|length > 0 %}
+                                <select class="form-select">
+                                    {% for inscription in participant.inscriptions %}
+                                        <option>{{ inscription.getNoSortie().nom }}</option>
+                                    {% endfor %}
+                                </select>
+                            {% else %}
+                                Aucune sortie associée
+                            {% endif %}
+                        </td>
+                    </tr>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <tr>
+                            <th>Administrateur</th>
+                            <td>{{ participant.administrateur ? 'Yes' : 'No' }}</td>
+                        </tr>
+                        <tr>
+                            <th>Actif</th>
+                            <td>{{ participant.actif ? 'Yes' : 'No' }}</td>
+                        </tr>
+                        <tr>
+                            <th>Roles</th>
+                            <td>{{ participant.roles|json_encode(constant('JSON_PRETTY_PRINT')) }}</td>
+                        </tr>
+                    {% endif %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="d-flex justify-content-center">
         {% if is_granted('ROLE_ADMIN') %}
-            <tr>
-                <th>Administrateur</th>
-                <td>{{ participant.administrateur ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>Actif</th>
-                <td>{{ participant.actif ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>Roles</th>
-                <td>{{ participant.roles|json_encode(constant('JSON_PRETTY_PRINT')) }}</td>
-            </tr>
+            <a href="{{ path('app_participant_index') }}" class="btn btn-primary ms-2">Liste d'utilisateurs</a>
         {% endif %}
-        </tbody>
-    </table>
-    {% if is_granted('ROLE_ADMIN') %}
-    <a href="{{ path('app_participant_index') }}" class="btn btn-primary">Back to list</a>
-    {% endif %}
-    <a href="{{ path('app_participant_edit_profil')}}" class="btn btn-primary">Edit</a>
-    {{ include('participant/_delete_form.html.twig') }}
+        <a href="{{ path('app_participant_edit_profil') }}" class="btn btn-success ms-2">Modifier</a>
+    </div>
 {% endblock %}
