--- a/templates/sorties/edit.html.twig
+++ b/templates/sorties/edit.html.twig
@@ -7,9 +7,19 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-4">
-                {{ include('sorties/_form.html.twig') }}
+                {{ form_start(form) }}
+
+                {{ form_row(form.nom) }}
+                {{ form_row(form.dateDebut) }}
+                {{ form_row(form.dateCloture) }}
+                {{ form_row(form.nbInscriptionsMax) }}
+                {{ form_row(form.descriptionInfos) }}
+                {{ form_row(form.urlPhoto) }}
+                {{ form_row(form.noLieu) }}
                 <div class="d-flex justify-content-center">
-                    <a class="btn btn-primary" href="{{ path('app_sorties_index') }}">Liste des sorties</a>
+                    <button class="btn btn-success ms-2" href="{{ path('app_sorties_edit', {'id': sortie.id}) }}">Modifier</button>
+                    <a class="btn btn-primary ms-2" href="{{ path('app_sorties_index') }}">Liste des sorties</a>
+                    {{ form_end(form) }}
                     {{ include('sorties/_delete_form.html.twig') }}
                 </div>
             </div>
