--- a/templates/participant/show.html.twig
+++ b/templates/participant/show.html.twig
@@ -5,6 +5,10 @@
 {% block body %}
     <h1 class="d-flex justify-content-center">Participant</h1>
 
+    <div class="d-flex justify-content-center mb-4">
+        <img class="img-fluid w-25" src="{{ asset('uploads/photos/' ~ participant.photo) }}" alt="Photo de profil" class="profile-photo">
+    </div>
+
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
