--- a/templates/sorties/edit.html.twig
+++ b/templates/sorties/edit.html.twig
@@ -11,7 +11,7 @@
 
                 {{ form_row(form.nom) }}
                 {{ form_row(form.dateDebut) }}
-                {{ form_row(form.dateCloture) }}
+                {{ form_row(form.dateClotureInscription) }}
                 {{ form_row(form.nbInscriptionsMax) }}
                 {{ form_row(form.descriptionInfos) }}
                 {{ form_row(form.urlPhoto) }}
