--- a/templates/sorties/show.html.twig
+++ b/templates/sorties/show.html.twig
@@ -20,7 +20,7 @@
                     </tr>
                     <tr>
                         <th>Date de Clôture</th>
-                        <td>{{ sortie.dateCloture ? sortie.dateCloture|date('d-m-Y H:i:s') : '' }}</td>
+                        <td>{{ sortie.dateClotureInscription ? sortie.dateClotureInscription|date('d-m-Y H:i:s') : '' }}</td>
                     </tr>
                     <tr>
                         <th>Durée</th>
