Maj2 twig dateClotureInscription

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -78,7 +78,7 @@
                     <tr>
                         <td>{{ sortie.nom }}</td>
                         <td>{{ sortie.dateDebut ? sortie.dateDebut|date('d-m-Y H:i') : '' }}</td>
-                        <td>{{ sortie.dateCloture ? sortie.dateCloture|date('d-m-Y H:i') : '' }}</td>
+                        <td>{{ sortie.dateClotureInscription ? sortie.dateClotureInscription|date('d-m-Y H:i') : '' }}</td>
                         <td>{{ sortie.duree }}</td>
                         <td>{{ sortie.nbInscriptionsMax }}</td>
                         <td>{{ sortie.descriptionInfos }}</td>
