--- a/templates/sorties/show.html.twig
+++ b/templates/sorties/show.html.twig
@@ -7,7 +7,7 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-4">
+            <div class="col-md-8">
                 <table class="table">
                     <tbody>
                     <tr>
@@ -23,7 +23,7 @@
                         <td>{{ sortie.dateFin ? sortie.dateFin|date('d-m-Y H:i') : '' }}</td>
                     </tr>
                     <tr>
-                        <th>Durée</th>
+                        <th>Durée (minutes)</th>
                         <td>{{ sortie.duree }}</td>
                     </tr>
                     <tr>
@@ -40,7 +40,13 @@
                     </tr>
                     <tr>
                         <th>Photo</th>
-                        <td>{{ sortie.urlPhoto }}</td>
+                        <td>
+                            {% if sortie.urlPhoto %}
+                                <img src="{{ sortie.urlPhoto }}" alt="Photo de la sortie" class="img-fluid"/>
+                            {% else %}
+                                Aucune photo disponible.
+                            {% endif %}
+                        </td>
                     </tr>
                     <tr>
                         <th>État</th>
@@ -79,7 +85,7 @@
         </div>
     </div>
 
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center mt-4">
         <a href="{{ path('app_sorties_index') }}" class="btn btn-primary ms-2">Liste des sorties</a>
         <a href="{{ path('app_sorties_edit', {'id': sortie.id}) }}" class="btn btn-success ms-2">Modifier</a>
 
@@ -87,8 +93,12 @@
         {% if isInscrit %}
             {# Bouton "Se désinscrire" visible seulement si l'utilisateur est inscrit #}
             <a href="{{ path('app_sorties_desinscription', {'id': sortie.id}) }}" class="btn btn-danger ms-2">Se désinscrire</a>
-        {% else %}
-            {# Bouton "S'inscrire" visible seulement si l'utilisateur n'est pas inscrit #}
+        {% elseif etat.libelle not in ['Clôturée', 'Annulée']
+            and sortie.dateClotureInscription > 'now'|date('Y-m-d H:i:s')
+            and cpt < sortie.nbInscriptionsMax %}
+            {# Bouton "S'inscrire" visible seulement si l'utilisateur n'est pas inscrit,
+                que la sortie est encore ouverte, que la date de clôture n'est pas dépassée,
+                et que la limite des inscriptions n'est pas atteinte #}
             <a href="{{ path('app_sorties_inscription', {'id': sortie.id}) }}" class="btn btn-primary ms-2">S'inscrire</a>
         {% endif %}
     </div>
