--- a/templates/sorties/show.html.twig
+++ b/templates/sorties/show.html.twig
@@ -34,6 +34,7 @@
                         <th>Description</th>
                         <td>{{ sortie.descriptionInfos }}</td>
                     </tr>
+
                     <tr>
                         <th>État de la Sortie</th>
                         <td>{{ sortie.noEtat.libelle }}</td>
@@ -43,15 +44,21 @@
                         <td>{{ sortie.urlPhoto }}</td>
                     </tr>
                     <tr>
-                        <th>État</th>
-                        <td>{{ etat.libelle }}</td>
-                    </tr>
-                    <tr>
                         <th>Date limite d'inscription</th>
                         <td>{{ sortie.dateClotureInscription ? sortie.dateClotureInscription|date('d-m-Y H:i') : '' }}</td>
                     </tr>
                     </tbody>
                 </table>
+
+                <div class="d-flex justify-content-center">
+                    {% if sortie.noEtat.libelle == 'Créée' %}
+                        <a href="{{ path('app_sorties_publication', {'id': sortie.id} ) }}"
+                           class="btn btn-success ms-2">Publier</a>
+                    {% endif %}
+                    <a href="{{ path('app_sorties_index') }}" class="btn btn-primary ms-2">Liste des sorties</a>
+
+                </div>
+
                 <h2>Liste des participants</h2>
                 <table class="table">
                     <thead>
@@ -80,16 +87,17 @@
     </div>
 
     <div class="d-flex justify-content-center">
-        <a href="{{ path('app_sorties_index') }}" class="btn btn-primary ms-2">Liste des sorties</a>
         <a href="{{ path('app_sorties_edit', {'id': sortie.id}) }}" class="btn btn-success ms-2">Modifier</a>
 
         {# Affichage conditionnel des boutons d'inscription #}
         {% if isInscrit %}
             {# Bouton "Se désinscrire" visible seulement si l'utilisateur est inscrit #}
-            <a href="{{ path('app_sorties_desinscription', {'id': sortie.id}) }}" class="btn btn-danger ms-2">Se désinscrire</a>
+            <a href="{{ path('app_sorties_desinscription', {'id': sortie.id}) }}" class="btn btn-danger ms-2">Se
+                désinscrire</a>
         {% else %}
             {# Bouton "S'inscrire" visible seulement si l'utilisateur n'est pas inscrit #}
-            <a href="{{ path('app_sorties_inscription', {'id': sortie.id}) }}" class="btn btn-primary ms-2">S'inscrire</a>
+            <a href="{{ path('app_sorties_inscription', {'id': sortie.id}) }}"
+               class="btn btn-primary ms-2">S'inscrire</a>
         {% endif %}
     </div>
 {% endblock %}
