--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,73 +1,96 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    <link rel="icon"
+          href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+    {% block stylesheets %}
+    {% endblock %}
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-        {% for label, messages in app.flashes %}
-            {% for message in messages %}
-                <div class="alert alert-{{ label }}">{{ message }}</div>
-            {% endfor %}
+    {% block javascripts %}
+        {% block importmap %}{{ importmap('app') }}{% endblock %}
+    {% endblock %}
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="alert alert-{{ label }}">{{ message }}</div>
         {% endfor %}
-    </head>
-    <body>
-        {% block navbar %}
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="{{path('app_home')}}">Sortir.com</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <ul class="navbar-nav">
-                                {% if is_granted('ROLE_ADMIN') %}
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="{{ path('app_admin')}}">Administration</a>
-                                    </li>
-                                {% endif %}
+    {% endfor %}
+</head>
+<body>
+{% block navbar %}
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{{ path('app_home') }}">Sortir.com</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <ul class="navbar-nav">
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_admin') }}">Administration</a>
+                            </li>
+                        {% endif %}
 
-                                {% if not is_granted('ROLE_USER') %}
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="{{path('app_login')}}">Connexion</a>
-                                    </li>
-                                {% endif %}
+                        {% if not is_granted('ROLE_USER') %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
+                            </li>
+                        {% endif %}
 
-                                {% if is_granted('ROLE_USER') %}
-                                    <li class="nav-item active">
-                                        <a class="nav-link" href="{{path('app_home')}}">Accueil</a>
-                                    </li>
+                        {% if is_granted('ROLE_USER') %}
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{{ path('app_home') }}">Accueil</a>
+                            </li>
 
-                                    {#
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="{{path('app_register')}}">Inscription</a>
-                                    </li>
-                                    #}
+                            {#
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{path('app_register')}}">Inscription</a>
+                            </li>
+                            #}
 
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="{{path('app_sorties_index')}}">Sorties</a>
-                                    </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_sorties_index') }}">Sorties</a>
+                            </li>
 
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="{{ path('app_user')}}">Mon Profil</a>
-                                    </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_user') }}">Mon Profil</a>
+                            </li>
 
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
-                                    </li>
-                                 {% endif %}
-                            </ul>
-                        </div>
-                    </div>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
+                            </li>
+                        {% endif %}
+                    </ul>
                 </div>
-            </nav>
-        {% endblock %}
-        {% block body %}{% endblock %}
-    </body>
+            </div>
+        </div>
+    </nav>
+{% endblock %}
+{% block body %}{% endblock %}
+{% block footer %}
+
+<div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <p class="col-md-4 mb-0 text-muted">© 2024 Les kassos du fond Inc</p>
+
+        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+
+        <ul class="nav col-md-4 justify-content-end">
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+        </ul>
+    </footer>
+</div>
+
+{% endblock %}
+</body>
 </html>
