import des participants a partir d'un csv file

--- a/templates/participant/index.html.twig
+++ b/templates/participant/index.html.twig
@@ -55,6 +55,7 @@
     </table>
     <div class="d-flex justify-content-center">
         <a href="{{ path('app_participant_new') }}" class="btn btn-primary">Créer un nouvel utilisateur</a>
+        <a href="{{ path('app_participant_import') }}" class="btn btn-primary">Importer à partir d'un fichier CSV</a>
     </div>
 
 
