Cards pour afficher les lieux

--- a/templates/lieux/index.html.twig
+++ b/templates/lieux/index.html.twig
@@ -5,6 +5,26 @@
 {% block body %}
     <h1 class="d-flex justify-content-center">Liste des lieux</h1>
 
+    <div class="container my-4">
+        <div class="row justify-content-center">
+            {% for lieux in lieuxes %}
+                <div class="col-md-3 mb-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="{{ asset('/uploads/photos/rennes.jpg')}}" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ lieux.nomLieu }}</h5>
+                            <p class="card-text">{{ lieux.noVille.nomVille }}</p>
+                            <p class="card-text">{{ lieux.rue }}</p>
+                            <p class="card-text">Latitude : {{ lieux.latitude }} - Longitude : {{ lieux.longitude }}</p>
+                            <a class="btn btn-primary" href="{{ path('app_lieux_show', {'id': lieux.id}) }}">Détails</a>
+                            <a class="btn btn-success" href="{{ path('app_lieux_edit', {'id': lieux.id}) }}">Modifier</a>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
