Refonte bdd et ajout fonctionnalités création groupes

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -103,6 +103,7 @@
             <a href="{{ path('app_lieux_new') }}" class="btn btn-primary ms-2">Ajouter un lieu</a>
             <a href="{{ path('app_sorties_new') }}" class="btn btn-primary ms-2">Créer une nouvelle sortie</a>
             <a href="{{ path('app_ajouter_villes_new') }}" class="btn btn-primary ms-2">Ajouter une ville</a>
+            <a href="{{ path('app_groupe_prive_new') }}" class="btn btn-primary ms-2">Créer un nouveau groupe</a>
         </div>
     </div>
 {% endblock %}
