Fonctionnalité groupe Privé fini ,mise a niveau suppression participant ,mise a niveau bdd et gestion sécurité pour les groupes.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -59,6 +59,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ path('app_user') }}">Mon Profil</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_groupe_prive_index') }}">Mes Groupes</a>
+                            </li>
 
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
