--- a/templates/groupe_prive/index.html.twig
+++ b/templates/groupe_prive/index.html.twig
@@ -22,6 +22,7 @@
                     <a class="btn btn-success ms-2" href="{{ path('app_groupe_prive_show', {'id': groupe_prive.id}) }}">Détails</a>
                     <a class="btn btn-success ms-2" href="{{ path('app_groupe_prive_edit', {'id': groupe_prive.id}) }}">Modifier</a>
                     <a class="btn btn-success ms-2" href="{{ path('app_groupe_prive_addParticipants', {'id': groupe_prive.id}) }}">Ajouter des Participants</a>
+                    <a class="btn btn-danger ms-2" href="{{ path('app_groupe_prive_deleteParticipants', {'id': groupe_prive.id}) }}">Supprimer des Participants</a>
                 </td>
             </tr>
         {% else %}
