--- a/templates/sorties/index.html.twig
+++ b/templates/sorties/index.html.twig
@@ -17,8 +17,8 @@
                         <th>Inscriptions</th>
                         <th>Lieu</th>
                         <th>Organisateur</th>
-                        <th></th>
-                        <th></th>
+                        <th>Détails</th><th>Modifier</th><th>Supprimer</th>
+                        
                     </tr>
                     </thead>
                     <tbody>
