--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,16 +1,32 @@
 /* Styles de base pour tous les écrans */
 body {
     font-family: Arial, sans-serif;
-    background-color: #bfd1ec;
+    background-color: #FFFFF0;
     margin: 0;
     padding: 0;
 }
 
-.filters{
-     display: flex;
-     justify-content: space-around;
-     width: auto;
- }
+h1, h2, h3, h4 {
+    font-family: "Roboto Condensed", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+
+.card {
+    max-width: 18rem;
+    margin: auto;
+}
+
+.row-cols-md-5 > .col {
+    flex: 0 0 20%;
+    max-width: 20%;
+}
+
+.filters {
+    display: flex;
+    justify-content: space-around;
+    width: auto;
+}
 
 .container {
     width: 100%;
@@ -43,13 +59,22 @@ nav a {
     nav {
         text-align: left;
     }
+
+    .row-cols-md-5 > .col {
+        flex: 0 0 33.333%;
+        max-width: 33.333%;
+    }
+
 }
+
+
 
 /* Styles pour les mobiles (écrans jusqu'à 767px) */
 @media (max-width: 767px) {
     .navbar-brand {
         margin-left: 50px;
     }
+
     .navbar-nav {
         margin-left: auto;
         margin-right: 70px;
@@ -62,8 +87,13 @@ nav a {
     }
 
     .nav-item {
-        margin-left:20px;
-        margin-right:20px;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .row-cols-md-5 > .col {
+        flex: 0 0 50%;
+        max-width: 50%;
     }
 
 }
