--- a/templates/sorties/show.html.twig
+++ b/templates/sorties/show.html.twig
@@ -63,11 +63,11 @@
                 </table>
 
                 <div class="d-flex justify-content-center">
-                    {% if sortie.noEtat.libelle == 'Créée' %}
+                    {% if sortie.noEtat.id == 1 %}
                         <a href="{{ path('app_sorties_publication', {'id': sortie.id} ) }}"
                            class="btn btn-success ms-2">Publier</a>
                     {% endif %}
-                    <a href="{{ path('app_sorties_index') }}" class="btn btn-primary ms-2">Liste des sorties</a>
+                    <a href="{{ path('app_home') }}" class="btn btn-primary ms-2">Autres sorties</a>
 
                 </div>
 
@@ -99,7 +99,6 @@
     </div>
 
     <div class="d-flex justify-content-center mt-4">
-        <a href="{{ path('app_sorties_index') }}" class="btn btn-primary ms-2">Liste des sorties</a>
         <a href="{{ path('app_sorties_edit', {'id': sortie.id}) }}" class="btn btn-success ms-2">Modifier</a>
 
         {# Affichage conditionnel des boutons d'inscription #}
