--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -49,6 +49,7 @@
                     <div class="col">
                         <div class="card h-100 d-flex flex-column">
                             <div class="card-body d-flex flex-column">
+                                <img src="{{ sortie.noLieu.noVille.urlPhotos }}" alt="Photo de la ville">
                                 <h5 class="card-title">{{ sortie.nom }}</h5>
                                 <h6 class="card-subtitle mb-2 text-muted">{{ sortie.noLieu.nomLieu }}
                                     ({{ sortie.noLieu.noVille.nomVille }})</h6>
