--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,9 +23,9 @@
 </head>
 <body>
 {% block navbar %}
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{{ path('app_home') }}">Sortir.com</a>
+            <a class="navbar-brand" href="{{ path('app_home') }}"><img src="{{ asset('/uploads/photos/sortir_transparent.png') }}" alt="Logo" class="navbar-logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
